--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <tittle>The change, its now !</tittle>
   <body>
   <h1>I had to change, I didn't see the instructions :)</h1>
-  <h2> i change h1 :)</h2>
+  <h2> i change h :)</h2>
   </body>
  </html>
  
