--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
   <h1>I had to change, I didn't see the instructions :)</h1>
   <h2> i change h :)</h2>
+    <h3>add new h</h3>
   </body>
  </html>
  
